--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <a href="https://www.utp.edu.co" target="_blank">Visita el sitio de la UTP</a>
     <h2>Sección de Calzado</h2>
     <p>En esta sección encontrarás diversidad de calzado para todas las edades,
-        géneros, gustos, tipo, deportes, etc.</p>
+        géneros, gustos, tipo, deportes, etc</p>
 
     <h3>Zapatillas para Hombre</h3>
     <h3>Calzado para Dama</h3>
