tercer commit añadido

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="C:\Users\ASUS\Desktop\pruebas_web\recursos\website_web_12218.ico" type="image/ico">
 </head>
 <body>
-    <h1>TIENDA ONLINE</h1>
+    <h1>TIENDA ONLINE DEL Jared</h1>
     <p>La tienda virtual está al servicio de la comunidad Pereirana, atendida por sus
         propietarios: estudiante1, estudiante2, estudiante3, estudiante4 y estudiante5</p>
     <a href="https://www.utp.edu.co" target="_blank">Visita el sitio de la UTP</a>
