--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="C:\Users\ASUS\Desktop\pruebas_web\recursos\website_web_12218.ico" type="image/ico">
 </head>
 <body>
-    <h1>TIENDA ONLINE DEL Jared</h1>
+    <h1>TIENDA ONLINE</h1>
     <p>La tienda virtual está al servicio de la comunidad Pereirana, atendida por sus
         propietarios: estudiante1, estudiante2, estudiante3, estudiante4 y estudiante5</p>
     <a href="https://www.utp.edu.co" target="_blank">Visita el sitio de la UTP</a>
@@ -19,6 +19,36 @@
     <h3>Zapatillas para Hombre</h3>
     <h3>Calzado para Dama</h3>
     <h3>Deportivos para Niños</h3>
+    
+    <table>
+        <caption>Contactos de la tienda por áreas</caption>
+        <tr>
+            <th>Áreas de la tienda</th>
+            <th>Contacto</th>
+            <th>Teléfono</th>
+        </tr>
+        <tr>
+            <td>Calzado Hombre</td>
+            <td>Estudiante 1</td>
+            <td>300 000 00</td>            
+        </tr>
+        <tr>
+            <td>Zapatillas para Hombre</td>
+            <td>Estudiante 2</td>
+            <td>300 000 01</td>            
+        </tr>
+        <tr>
+            <td>Calzado para Dama</td>
+            <td>Estudiante 3</td>
+            <td>300 000 02</td>            
+        </tr>
+        <tr>
+            <td>Deportivos para Niño</td>
+            <td>Estudiante 4</td>
+            <td>300 000 03</td>            
+        </tr>
+    </table>
+
     <h2>Sección de Ropa</h2>
 </body>
 </html>
