agregación d eimagenes y contenido a la web

--- a/index.html
+++ b/index.html
@@ -7,19 +7,58 @@
     <title>Pagina Principal</title> 
     <link rel="icon" href="C:\Users\ASUS\Desktop\pruebas_web\recursos\website_web_12218.ico" type="image/ico">
 </head>
-<body>
+<body>    
     <h1>TIENDA ONLINE</h1>
+    <div id="MenuNav">
+        <a href="file:///C:/Users/ASUS/Desktop/pruebas_web/index.html">Inicio</a>
+        <a href="file:///C:/Users/ASUS/Desktop/pruebas_web/index.html">Quienes somos?</a>
+        <a href="file:///C:/Users/ASUS/Desktop/pruebas_web/index.html">Contacto</a>
+    </div>
     <p>La tienda virtual está al servicio de la comunidad Pereirana, atendida por sus
         propietarios: estudiante1, estudiante2, estudiante3, estudiante4 y estudiante5</p>
     <a href="https://www.utp.edu.co" target="_blank">Visita el sitio de la UTP</a>
+    <br>
+    <br>
+        
+    <img src="C:\Users\ASUS\Desktop\pruebas_web\recursos\mohammad-metri.jpg" alt="Calzado para dama" width="199" height="148">
+    &nbsp;&nbsp;&nbsp;&nbsp;
+    <img src="C:\Users\ASUS\Desktop\pruebas_web\recursos\joseph-barrientos.jpg" alt="Calzado deportivo" width="199" height="148">
+    &nbsp;&nbsp;&nbsp;&nbsp;
+    <img src="C:\Users\ASUS\Desktop\pruebas_web\recursos\camila-damasio.jpg" alt="Calzado para niño" width="199" height="148">
+    <br>
+    <br>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/PZIqV7wNyyU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
     <h2>Sección de Calzado</h2>
     <p>En esta sección encontrarás diversidad de calzado para todas las edades,
         géneros, gustos, tipo, deportes, etc</p>
 
     <h3>Zapatillas para Hombre</h3>
+    <div class="card">
+        <img src="C:\Users\ASUS\Desktop\pruebas_web\recursos\revolt.jpg" alt="Calzado para hombre" width="209" height="164">    
+        <h4>Nike Running Rojos</h4>
+        <p class="Valor">$154.999</p>
+        <p>Tennis para correr</p>
+        <p><button>Adicionar al carro</button></p>
+    </div>
     <h3>Calzado para Dama</h3>
     <h3>Deportivos para Niños</h3>
     
+    <h3>Beneficios del calzado deportivo</h3>
+    <ul>
+        <li>Son cómodos</li>
+        <li>Combinan con todo tipo de ropa</li>
+        <li>No inflaman los pies</li>
+    </ul>
+
+
+    <h3>Pasos para elegir tu calzado deportivo:</h3>
+    <ol>
+        <li>Qué tipo de actividad vas a realizar?</li>
+        <li>Cuanto calzas?</li>
+        <li>Que color te gusta?</li>
+    </ol>
+
     <table>
         <caption>Contactos de la tienda por áreas</caption>
         <tr>
@@ -50,5 +89,9 @@
     </table>
 
     <h2>Sección de Ropa</h2>
+    <footer>
+        <p>Autores:Desarrolladores</p>
+        <p><a href="mailto:hege@example.com">hege@example.com</a></p>
+    </footer>
 </body>
 </html>
