--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagina Principal</title>
-    <link rel="icon" href="C:\Users\ASUS\Desktop\pruebas_web\recursos\website_web_12218.ico" type="image/ico">
+    <link rel="icon" href="C:\Users\ASUS\Desktop\pruebas_web\recursos\website_web_12218.ico" type="image/ico">    
+    <link rel="stylesheet" href="estilos.css">
 </head>
-<body>        
+<body>
     <h1>TIENDA ONLINE</h1>
 
-    <div id="MenuNav">
-        <a href="file:///C:/Users/ASUS/Desktop/pruebas_web/index.html">Inicio</a>
-        <a href="file:///C:/Users/ASUS/Desktop/pruebas_web/index.html">Quienes Somos?</a>
-        <a href="file:///C:/Users/ASUS/Desktop/pruebas_web/index.html">Contacto</a>
+    <div id="MenuNav" class="content">
+        <a href="file:///C:/Users/ASUS/Desktop/pruebas_web/index.html" class="texto">Inicio</a>
+        <a href="file:///C:/Users/ASUS/Desktop/pruebas_web/index.html" class="texto">Quienes Somos?</a>
+        <a href="file:///C:/Users/ASUS/Desktop/pruebas_web/index.html" class="texto">Contacto</a>
     </div>
 
     <p><b>La tienda virtual</b> está al servicio de la comunidad Pereirana, atendida por sus
@@ -31,11 +32,11 @@
     <br>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/PZIqV7wNyyU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-    <h2>Sección de Calzado</h2>
+    <h2 class="titulo">Sección de Calzado</h2>
     <p>En esta sección encontrarás diversidad de calzado para todas las edades,
         géneros, gustos, tipo, deportes, etc.</p>
 
-    <h3>Zapatillas para Hombre</h3>
+    <h3 class="titulo">Zapatillas para Hombre</h3>
     <div class="card">
         <img src="C:\Users\ASUS\Desktop\pruebas_web\recursos\revolt.jpg" alt="calzado para hombre" width="200" height="160">
         <h4>Nike Running Rojos</h4>
@@ -43,18 +44,18 @@
         <p>Tenis para correr</p>
         <p><button>Adicionar al carro</button></p>
     </div>
-    <h3>Calzado para Dama</h3>
-    <h3>Deportivos para Niño</h3>
+    <h3 class="titulo">Calzado para Dama</h3>
+    <h3 class="titulo">Deportivos para Niño</h3>
 
     <br>
-    <h3>Beneficios del calzado deportivo</h3>
+    <h3 class="titulo">Beneficios del calzado deportivo</h3>
     <ul>
         <li>Son comodos</li>
         <li>Combinan con todo tipo de ropa</li>
         <li>No inflaman los pies</li>
     </ul>
     <br>
-    <h3>Pasos para elegir tu calzado deportivo:</h3>
+    <h3 class="titulo">Pasos para elegir tu calzado deportivo:</h3>
     <ol>
         <li>Que tipo de actividad vas a realizar?</li>
         <li>Cuanto calzas?</li>
@@ -62,36 +63,36 @@
     </ol>
     <br>
     <br>
-    <table border="">
-        <caption>Contactos de la tienda por áreas</caption>
-        <tr>
-            <th>Áreas de la tienda</th>
-            <th>Contacto</th>
-            <th>Teléfono</th>
+    <table class="tabla">
+        <caption class="tabla">Contactos de la tienda por áreas</caption>
+        <tr class="tabla">
+            <th class="tabla">Áreas de la tienda</th>
+            <th class="tabla">Contacto</th>
+            <th class="tabla">Teléfono</th>
         </tr>
-        <tr>
-            <td>Calzado Hombre</td>
-            <td>Estudiante 1</td>
-            <td>300 000 00</td>
+        <tr class="tabla">
+            <td class="tabla">Calzado Hombre</td>
+            <td class="tabla">Estudiante 1</td>
+            <td class="tabla">300 000 00</td>
         </tr>
-        <tr>
-            <td>Zapatillas para Hombre</td>
-            <td>Estudiante 2</td>
-            <td>300 000 01</td>
+        <tr class="tabla">
+            <td class="tabla">Zapatillas para Hombre</td>
+            <td class="tabla">Estudiante 2</td>
+            <td class="tabla">300 000 01</td>
         </tr>
-        <tr>
-            <td>Calzado para Dama</td>
-            <td>Estudiante 3</td>
-            <td>300 000 02</td>
+        <tr class="tabla">
+            <td class="tabla">Calzado para Dama</td>
+            <td class="tabla">Estudiante 3</td>
+            <td class="tabla">300 000 02</td>
         </tr>
-        <tr>
-            <td>Deportivos para Niño</td>
-            <td>Estudiante 4</td>
-            <td>300 000 03</td>
+        <tr class="tabla">
+            <td class="tabla">Deportivos para Niño</td>
+            <td class="tabla">Estudiante 4</td>
+            <td class="tabla">300 000 03</td>
         </tr>
     </table>    
 
-    <h2>Sección de Ropa</h2>
+    <h2 class="titulo">Sección de Ropa</h2>
 
     <dl>
         <dt>Chaquetas WaterProof</dt>
@@ -106,7 +107,8 @@
         <input type="text" name="nombreC" id="nombreC" placeholder="Nombres y apellidos" required>
         <br>
         <label for="ZapatoB">Zapato que no encontraste</label>
-        <input type="text" name="zapatoab" id="zapatoab"><br><br>
+        <input type="text" name="zapatoab" id="zapatoab">
+        <br><br>
         <input type="radio" id="zapatoh" name="tzapato" value="hombre">
         <label for="male">Hombre</label><br>
         <input type="radio" id="zapatom" name="tzapato" value="mujer">
