--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <div id="MenuNav" class="content">
         <a href="file:///C:/Users/ASUS/Desktop/pruebas_web/index.html" class="texto">Inicio</a>
         <a href="file:///C:/Users/ASUS/Desktop/pruebas_web/index.html" class="texto">Quienes Somos?</a>
-        <a href="file:///C:/Users/ASUS/Desktop/pruebas_web/index.html" class="texto">Contacto</a>
+        <a href="file:///C:/Users/ASUS/Desktop/pruebas_web/index.html" class="texto">Contacto</a>        
     </div>
-
+    <br>           
     <p><b>La tienda virtual</b> está al servicio de la comunidad Pereirana, atendida por sus
         propietarios: estudiante1, estudiante2, estudiante3, estudiante4 y estudiante5</p>
     
@@ -120,6 +120,15 @@
 
     <br>
     <br>
+
+    <div class="container2">
+        <div class="box1"></div>
+        <div class="box2"></div>
+        <div class="box3"></div>
+        <div class="box4"></div>
+        <div class="box5"></div>
+    </div>
+
     <footer>
         <p>Autores:Desarrolladores</p>
         <p><a href="mailto:hege@example.com">hege@example.com</a></p>
